--- a/etc/style.css
+++ b/etc/style.css
@@ -2,6 +2,16 @@ html, body {
     height:90%;
 }
 
+code {
+    font-family: 'DejaVu Sans Mono', 'Monaco', 'Consolas'
+}
+
+blockquote {
+    margin: 0px;
+    padding-left: 40px;
+    border-left: 5px solid #333;
+}
+
 #container {
     height:95%;
 }
